--- a/1. Website SolarCamp/index.html
+++ b/1. Website SolarCamp/index.html
@@ -22,7 +22,7 @@
     <div id="quote">
         <p>
             We're <em>campers</em>, <em>farmers</em>, and <em>eaters</em> of<br>
-            organically grown food.
+            organically grown food.</br>
         </p>
     </div>
 
