--- a/1. Website SolarCamp/index.html
+++ b/1. Website SolarCamp/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-        <p>SolarCamp</p>
+        <p><a href="#">SolarCamp</a></p>
         <nav>
             <a href="#">Merch</a>
             <a href="#">Newstand</a>
