--- a/1. Website SolarCamp/index.html
+++ b/1. Website SolarCamp/index.html
@@ -9,24 +9,53 @@
 <body>
 
     <header>
-        <p><a href="#">SolarCamp</a></p>
+        <p>
+            <a id="home-button" href="#">SolarCamp</a>
+        </p>
         <nav>
-            <a href="#">Merch</a>
-            <a href="#">Newstand</a>
-            <a href="#">Who we are</a>
-            <a href="#">Bookings</a>
-            <a id="basket" href="#">Basket</a>
+            <a id="normal-button" href="#">Merch</a>
+            <a id="normal-button" href="#">Newstand</a>
+            <a id="normal-button" href="#who-we-are">Who we are</a>
+            <a id="normal-button" href="#">Bookings</a>
+            <a id="basket-button" href="#">Basket</a>
         </nav>
     </header>
 
-    <div id="quote">
+    <div id="solarcamp-quote">
         <p>
-            We're <em>campers</em>, <em>farmers</em>, and <em>eaters</em> of<br>
+            We're <em>campers</em>, <em>farmers</em>, and <em>eaters</em> of</br>
             organically grown food.</br>
         </p>
     </div>
 
     <a id="browse-button" href="#">Browse our spots</a>
+
+    <div id="camping-images-container">
+        <div class="image-container">
+            <img id="vogue-vegetables-image" src="Vogue Vegetables.jpg" alt="Vogue Vegetables image">
+            <p id="vogue-vegetables-image-quote">
+                <strong>Vogue Vegetables</strong> - <em>Grown on SolarCamp</em>
+            </p>
+        </div>
+        
+        <div class="image-container">
+            <img id="vogue-camping-image" src="Vogue Camping.jpg" alt="Vogue Camping image">
+            <p id="vogue-camping-image-quote">
+                <strong>Vogue Camping</strong> - <em>The person who sits here is a billionaire</em>
+            </p>
+        </div>
+    </div>
+    
+
+    <div id="who-we-are-container">
+        <p id="who-we-are-title">
+            Who we are.
+        </p>
+        <p id="who-we-are-paragraph">
+            We camp
+        </p>
+
+    </div>
 
 </body>
 </html>
