Normalize line endings

--- a/1. Website SolarCamp/index.html
+++ b/1. Website SolarCamp/index.html
@@ -21,8 +21,8 @@
         </nav>
     </header>
 
-    <div id="solarcamp-quote">
-        <p>
+    <div id="solarcamp-pagebreak">
+        <p id="solarcamp-quote">
             We're <em>campers</em>, <em>farmers</em>, and <em>eaters</em> of</br>
             organically grown food.</br>
         </p>
@@ -45,16 +45,33 @@
             </p>
         </div>
     </div>
-    
 
-    <div id="who-we-are-container">
-        <p id="who-we-are-title">
-            Who we are.
-        </p>
-        <p id="who-we-are-paragraph">
-            We camp
-        </p>
+    <div id="solarcamp-pagebreak">
+        <p id="solarcamp-title">
+           Who we are.
+        </p>    
+    </div>
 
+
+    <div id="camping-paragraphs-container">
+        <div class="paragraph-container">
+            <p>
+                Welcome to my little corner of the digital world, where the hum of nature meets the buzz of technology in a harmonious dance. I'm not just a farmer; I'm a cultivator of dreams, an advocate for sustainable living, and a storyteller of my journey from a small boy tending to the earth to a steward of a green haven. Growing up on this farm, the soil beneath my fingers told tales of seasons changing, crops blooming, and the interconnectedness of all living things. Inspired by the sun-drenched fields and starlit nights, I've embarked on a mission to bring the serenity of camping and the vision of solarpunk living to fellow enthusiasts.
+                My website is a digital canvas where I paint the picture of my agrarian odyssey, sharing the roots of my passion for organic farming that stretch back to my childhood. From chasing fireflies in the twilight to the aroma of freshly plowed fields, every moment has etched itself into the fabric of my being. It's not just about cultivating crops; it's about fostering a relationship with the land that goes beyond mere sustenance.
+            </p>
+        </div>
+
+        <div class="paragraph-container">
+            <p>
+                As the world evolves, so does my commitment to sustainability. The website is a testament to my dedication to making everything organic and eco-friendly. Whether it's the solar panels that power my humble abode or the compost that enriches the soil, every aspect of this virtual space mirrors the ethos of solarpunk – a movement that envisions a future where technology and nature coexist in perfect balance. Through blog posts, videos, and a gallery of sun-kissed landscapes, I invite fellow campers and solarpunk enthusiasts to join me on this eco-conscious journey.
+                Together, let's pitch our tents under the vast expanse of a starlit sky, kindle our campfires with renewable energy, and weave a tapestry of sustainable living that echoes through the digital realm.            </p>
+        </div>
+    </div>
+
+    <div id="solarcamp-pagebreak">
+        <p id="solarcamp-quote">
+            <em>"Welcome to my farm, where the seeds of a greener future are sown, and the harvest is shared with all who seek to embrace the beauty of camping and the principles of solarpunk living."</em>
+        </p>
     </div>
 
 </body>
