--- a/1. Website SolarCamp/index.html
+++ b/1. Website SolarCamp/index.html
@@ -15,7 +15,7 @@
         <nav>
             <a id="normal-button" href="#">Merch</a>
             <a id="normal-button" href="#">Newstand</a>
-            <a id="normal-button" href="#who-we-are">Who we are</a>
+            <a id="normal-button" href="#">Who we are</a>
             <a id="normal-button" href="#">Bookings</a>
             <a id="basket-button" href="#">Basket</a>
         </nav>
