--- a/1. Website SolarCamp/index.html
+++ b/1. Website SolarCamp/index.html
@@ -8,71 +8,71 @@
 </head>
 <body>
 
+    <!-- Header Section -->
     <header>
         <p>
-            <a id="home-button" href="#">SolarCamp</a>
+            <a class="logo" href="#">SolarCamp</a>
         </p>
         <nav>
-            <a id="normal-button" href="#">Merch</a>
-            <a id="normal-button" href="#">Newstand</a>
-            <a id="normal-button" href="#">Who we are</a>
-            <a id="normal-button" href="#">Bookings</a>
-            <a id="basket-button" href="#">Basket</a>
+            <a class="nav-button" href="#">Who we are</a>
+            <a class="nav-button" href="#">Newstand</a>
+            <a class="nav-button" href="#">Log in</a>
+            <a class="nav-button" href="#">Bookings</a>
+            <a class="basket-button" href="#">Basket</a>
         </nav>
     </header>
 
-    <div id="solarcamp-pagebreak">
+    <!-- Introduction Section -->
+    <section id="solarcamp-introduction-section">
         <p id="solarcamp-quote">
             We're <em>campers</em>, <em>farmers</em>, and <em>eaters</em> of</br>
             organically grown food.</br>
         </p>
-    </div>
+        <a class="browse-button" href="#">Browse our spots</a>
+    </section>
 
-    <a id="browse-button" href="#">Browse our spots</a>
-
-    <div id="camping-images-container">
-        <div class="image-container">
-            <img id="vogue-vegetables-image" src="Vogue Vegetables.jpg" alt="Vogue Vegetables image">
-            <p id="vogue-vegetables-image-quote">
-                <strong>Vogue Vegetables</strong> - <em>Grown on SolarCamp</em>
-            </p>
+    <!-- Camping Images Section -->
+    <section id="camping-images-container">
+        <!-- Left Section for Vertical Picture -->
+        <div class="image-container vertical-image-container">
+            <img src="Vogue Vegetables.jpg" alt="Vogue Vegetables image">
+                <p>
+                    <strong>Vogue Vegetables</strong> - <em>Grown on SolarCamp</em>
+                </p>
         </div>
-        
-        <div class="image-container">
-            <img id="vogue-camping-image" src="Vogue Camping.jpg" alt="Vogue Camping image">
-            <p id="vogue-camping-image-quote">
-                <strong>Vogue Camping</strong> - <em>The person who sits here is a billionaire</em>
-            </p>
+    
+    <!-- Right Section for Horizontal Picture -->
+        <div class="image-container horizontal-image-container">
+            <img src="Vogue Camping.jpg" alt="Vogue Camping image">
+                <p>
+                   <strong>Vogue Camping</strong> - <em>The person who sits here is a billionaire</em>
+                </p>
         </div>
-    </div>
 
-    <div id="solarcamp-pagebreak">
-        <p id="solarcamp-title">
+    </section>
+
+
+    <!-- Who We Are Section -->
+    <section id="solarcamp-title-pagebreak">
+        <p>
            Who we are.
         </p>    
-    </div>
+    </section>
 
-
-    <div id="camping-paragraphs-container">
-        <div class="paragraph-container">
+    <!-- Camping Paragraphs Section -->
+    <section id="camping-paragraph-container">
+        <div class="paragraph">
             <p>
-                Welcome to my little corner of the digital world, where the hum of nature meets the buzz of technology in a harmonious dance. I'm not just a farmer; I'm a cultivator of dreams, an advocate for sustainable living, and a storyteller of my journey from a small boy tending to the earth to a steward of a green haven. Growing up on this farm, the soil beneath my fingers told tales of seasons changing, crops blooming, and the interconnectedness of all living things. Inspired by the sun-drenched fields and starlit nights, I've embarked on a mission to bring the serenity of camping and the vision of solarpunk living to fellow enthusiasts.
-                My website is a digital canvas where I paint the picture of my agrarian odyssey, sharing the roots of my passion for organic farming that stretch back to my childhood. From chasing fireflies in the twilight to the aroma of freshly plowed fields, every moment has etched itself into the fabric of my being. It's not just about cultivating crops; it's about fostering a relationship with the land that goes beyond mere sustenance.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
         </div>
 
-        <div class="paragraph-container">
+        <div class="paragraph">
             <p>
-                As the world evolves, so does my commitment to sustainability. The website is a testament to my dedication to making everything organic and eco-friendly. Whether it's the solar panels that power my humble abode or the compost that enriches the soil, every aspect of this virtual space mirrors the ethos of solarpunk – a movement that envisions a future where technology and nature coexist in perfect balance. Through blog posts, videos, and a gallery of sun-kissed landscapes, I invite fellow campers and solarpunk enthusiasts to join me on this eco-conscious journey.
-                Together, let's pitch our tents under the vast expanse of a starlit sky, kindle our campfires with renewable energy, and weave a tapestry of sustainable living that echoes through the digital realm.            </p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
         </div>
-    </div>
-
-    <div id="solarcamp-pagebreak">
-        <p id="solarcamp-quote">
-            <em>"Welcome to my farm, where the seeds of a greener future are sown, and the harvest is shared with all who seek to embrace the beauty of camping and the principles of solarpunk living."</em>
-        </p>
-    </div>
+    </section>
 
 </body>
 </html>
