--- a/1. Website SolarCamp/index.html
+++ b/1. Website SolarCamp/index.html
@@ -11,12 +11,12 @@
     <!-- Header Section -->
     <header>
         <p>
-            <a class="logo" href="#">SolarCamp</a>
+            <a class="logo" href="index.html">SolarCamp</a>
         </p>
         <nav>
             <a class="nav-button" href="#">Who we are</a>
             <a class="nav-button" href="#">Newstand</a>
-            <a class="nav-button" href="#">Log in</a>
+            <a class="nav-button" href="login.html">Log in</a>
             <a class="nav-button" href="#">Bookings</a>
             <a class="basket-button" href="#">Basket</a>
         </nav>
@@ -41,7 +41,7 @@
                 </p>
         </div>
     
-    <!-- Right Section for Horizontal Picture -->
+        <!-- Right Section for Horizontal Picture -->
         <div class="image-container horizontal-image-container">
             <img src="Vogue Camping.jpg" alt="Vogue Camping image">
                 <p>
