--- a/1. Website SolarCamp/index.html
+++ b/1. Website SolarCamp/index.html
@@ -16,8 +16,8 @@
         <nav>
             <a class="nav-button" href="#">Who we are</a>
             <a class="nav-button" href="#">Newstand</a>
+            <a class="nav-button" href="register.html">Register</a>
             <a class="nav-button" href="login.html">Log in</a>
-            <a class="nav-button" href="#">Bookings</a>
             <a class="basket-button" href="#">Basket</a>
         </nav>
     </header>
