--- a/1. Website SolarCamp/register.html
+++ b/1. Website SolarCamp/register.html
@@ -22,16 +22,16 @@
         </nav>
     </header>
 
-    <h2>Login</h2>
-    <form action="login.php" method="post">
+    <h2>Register</h2>
+    <form action="register.php" method="post">
         <label for="username">Username:</label>
-        <input type="text" name="username" id="username" required><br>
+        <input type="text" name="username" required><br>
 
         <label for="password">Password:</label>
-        <input type="password" name="password" id="password" required><br>
+        <input type="password" name="password" required><br>
 
-        <button type="submit">Login</button>
+        <button type="submit">Register</button>
     </form>
-
+    
 </body>
 </html>
