working res. form
reservering form working

--- a/1. Website - Rawien/Reservering.html
+++ b/1. Website - Rawien/Reservering.html
@@ -166,15 +166,16 @@
       <label for="date2">Eind datum:</label>
       <input type="date" id="date2" name="date2" />
 
-      <!--<label for="email">Volwassenen:</label>
-      <input type="text" id="Volwassenen" name="Volwassenen" />-->
+      <label for="Volwassenen">Volwassenen:</label>
+      <input type="text" id="Volwassenen" name="Volwassenen" />
 
-      <label for="email">Volwas./Kind.:</label>
+      <label for="kinderen">Volwas./Kind.:</label>
       <input type="text" id="kinderen" name="kinderen" />
 
   
-        <label for="Extras">Faciliteiten:</label>
-        <select id="extra" name="extras">
+        <label for="Extras">Zwembad (typ ja of nee):</label>
+        <input type="text" id="zwembad" name="zwembad" />
+        <!--<select id="extra" name="extras">
           <option value="zwembad">Zwembad (10 euro)</option>
           <option value="geenzwembad">Geen zwembad</option>
           <!--<option value="pie">Sauna (20 euro)</option>
